fixed spacing for each margin-top back

--- a/src/pages/contact.module.css
+++ b/src/pages/contact.module.css
@@ -146,7 +146,7 @@ label {
         position: relative;
         left: 0;
         width:100%;
-        margin-top: 90vh;
+        margin-top: 15vh;
     }
 
     .formBlurb {
